Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -65,16 +65,23 @@
 \end{abstract}
 
 
+\section{Introduction} \label{intro}
+\input{secs/intro}
+
+
 \section{Motivating Examples} \label{examples}
 \input{secs/examples}
 
-\section{System Overview}
+\section{Problem Formulation}
+\input{secs/problem}
+
+\section{Implementation}
 \input{secs/overview}
 
-\section{Offline: Synthesis Engine Construction}
+\subsection{Offline: Synthesis Engine Construction}
 \input{secs/offline}
 
-\section{Online: Fitting Functions to Examples}
+\subsection{Online: Fitting Functions to Examples}
 \input{secs/synth}
 
 \section{Evaluation}
