nicer code, more structure

--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,9 @@
 
 \usepackage{graphicx}
 
+\lstset{basicstyle=\footnotesize,breaklines=true}
+\lstset{framextopmargin=50pt,frame=bottomline}
+
 %\usepackage{minted}
 %\usepackage{tcolorbox}
 %\usepackage{etoolbox}
