--- a/main.tex
+++ b/main.tex
@@ -32,9 +32,12 @@
 
 \usepackage{graphicx}
 
-\lstset{basicstyle=\footnotesize,breaklines=true}
-\lstset{framextopmargin=50pt,frame=bottomline}
-
+\lstset{
+  basicstyle=\footnotesize,
+  breaklines=true,
+  framextopmargin=50pt,
+  frame=bottomline,
+  language=haskell}
 %\usepackage{minted}
 %\usepackage{tcolorbox}
 %\usepackage{etoolbox}
