--- a/secs/eval.tex
+++ b/secs/eval.tex
@@ -1,3 +1,5 @@
+here is a big table that takes up a whole page
+
 \subsection{Optimizations}
 
 Since the standard library can be considered a relatively stable set of code, we can cache the refinement type inference to reduce the build time.
