--- a/secs/synth.tex
+++ b/secs/synth.tex
@@ -4,7 +4,7 @@ Once the candidate functions are identified, a best-first search is initiated ov
 
 As in section \ref{HORtypeInf}, we also consider two cases for examples. The first where the example input and output types match up to the top level type constructor, and the the case where the types do not match.
 
-In the case that the types do match, we find the set of refinement types that the examples satisfy. Generating refinement type predicates about the size of the input and output, as in section \ref{HORTypes}, we run type inference on the input / output examples to \markk{ALEX, the following is wrong, what is a basic rtype anyway?} get a basic refinement type. Then, the input-output pairs are matched against a fixed set of predicates to enrich the refinement type. These predicates could impose constraints such as the input list being of equal, lesser, or greater size to the output list. \markk{end things being junk} For instance, the example set:
+In the case that the types do match, we find the set of refinement types that the examples satisfy. Generating refinement type predicates about the size of the input and output, as in section \ref{HORTypes}, we run type inference on the input / output examples to \markk{the following is wrong, what is a basic rtype anyway?} get a basic refinement type. Then, the input-output pairs are matched against a fixed set of predicates to enrich the refinement type. These predicates could impose constraints such as the input list being of equal, lesser, or greater size to the output list. \markk{end things being junk} For instance, the example set:
 
 \begin{lstlisting}
 exs = [[1,2,3,4] :-> [1,3],
@@ -49,7 +49,7 @@ We identify two separate classes of higher order functions - those that take a s
 
 To identify initial values in a type signature, we can use our previous assumption that all hihgher order function have been partially curried to the type \texttt{$\_\to *\to*$}. Adding the further assumption that only one first order function maybe be passed to the higher order function, we simply tag any non-function type in the hole as an initial value. 
 
-Since examples must be given as a concrete type, we can always specialize a our candidate higher order function. If the initial type is an instance of Monoid, we can extract the unit value (mempty in the moiod typeclass) to use as our initial value. 
+Since examples must be given as a concrete type, we can always specialize a our candidate higher order function. If the initial type is an instance of Monoid, we can extract the unit value (mempty in the monoid typeclass) to use as our initial value. 
 
 For lists, the unit element is []. However, there are two valid monoids for numbers, using either (+) or (*) as the operators and resulting in unit elements 0 and 1 respectively. We take both of these values as possibilities since the cost is small \markk{compared to all the refinement type stuff we are doing.}
 
@@ -61,6 +61,7 @@ foldl :: (a -> b -> a) -> [b] -> a
 foldl5 f i o = foldl f 5 i o
 \end{lstlisting}
 
+This same procedure is applied to fix instances of first order functions.
 
 \subsubsection{Soundness and Completeness}\label{sound}
 \markk{for completness, can we show that we are complete within a specific domain? Also see \ref{extLiqHask} for more on completness.}
