updated examples and other stuff

--- a/secs/conclusion.tex
+++ b/secs/conclusion.tex
@@ -1,3 +1,5 @@
 \subsection{Limitations}
 
 Without subexample generation we cannot recursively apply our algorithm to create programs with multiple applications of higher order functions as in the   $\Lambda^2$ paper\cite{isil}. Since they provide hard coded subexample generation hypotheses for the higher order functions they use, this does not scale.
+
+With the eventual goal of building a complete program synthesis engine, we will need to integrate the first order function synthesis. While this problem has been investigated in isolation, it is not clear how to efficiently determine if  a set of examples will require a higher order function or a first order function.
