better problem def

--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 \section{Evaluation}
 \input{secs/eval}
 
-\section{Related Work and Conclusions}
+\section{Related Work and Conclusions}\label{conclusions}
 \input{secs/conclusion}
 
 \bibliographystyle{abbrvnat}
